# Command-Line_Rust

./: .gitignore  README.md
ch01/hello/: Cargo.toml
ch01/hello/tests/: cli.rs
ch02/echor-derive/: Cargo.toml  mk-out.sh
ch02/echor-derive/src/: main.rs
ch02/echor-derive/tests/: cli.rs
ch02/echor/src/: main.rs
ch02/echor/tests/: cli.rs
ch03/catr/: Cargo.toml  mk-out.sh
ch03/catr-derive/: Cargo.toml
ch03/catr-derive/src/: main.rs
ch03/catr-derive/tests/: cli.rs
ch03/catr/src/: main.rs
ch04/headr/: Cargo.toml
ch04/headr-derive/: Cargo.toml
ch04/headr-derive/src/: lib.rs  main.rs
ch05/wcr/: Cargo.toml  mk-outs.sh
ch05/wcr-derive/: Cargo.toml
ch05/wcr-derive/src/: lib.rs  main.rs
ch05/wcr-derive/tests/: cli.rs
ch06/uniqr/: Cargo.toml
ch06/uniqr-derive/: Cargo.toml  mk-outs.sh
ch07/findr/: Cargo.toml  cp-tests.sh  mk-outs.sh
ch07/findr/src/: args.rs  main.rs
ch07/findr/tests/: cli.rs
ch07/findr/tests/expected/: name_csv.txt  name_csv_mp3.txt  path1.txt  path_a.txt  path_a_b.txt  path_a_b_d.txt  path_d.txt  type_d.txt  type_f.txt  type_f_l.txt  type_f_path_a.txt  type_f_path_a_b.txt  type_f_path_a_b_d.txt
ch08/cutr/: Cargo.toml  README.md  mk-outs.sh
ch08/cutr/src/: args.rs  file.rs  lib.rs  main.rs
ch08/cutr/src/args/: arg_range.rs
ch08/cutr/tests/: cli.rs
ch09/grepr/: Cargo.toml  mk-outs.sh
ch10/commr/: Cargo.toml
ch11/biggie/: README.md
ch11/tailr/: Cargo.toml  mk-outs.sh
ch12/fortuner/: .gitignore  Cargo.toml  mk-dat.sh  mk-out.go
ch12/fortuner/src/: args.rs  fortune.rs  lib.rs  main.rs
ch12/fortuner/test/expected/: twain_lower.err
ch12/fortuner/tests/: cli.rs
ch12/fortuner/tests/outputs/: berra_lower_i.err  twain_lower_i.err
ch13/calr/: Cargo.toml  mk-outs.go
ch13/calr/src/: args.rs  date.rs  lib.rs  main.rs  month.rs
ch13/calr/tests/: cli.rs
ch13/calr/tests/expected/: 2-2020.txt  2020.txt  4-2020.txt  5-2020.txt
ch14/lsr/: Cargo.toml  test-test-perms.go
(+28 files in other folders)
