[package]
name = "findr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
regex = { version = "1.11" }
walkdir = { version = "2.5" }

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "3.0" }
pretty_assertions = { version = "1.4" }
rand = { version = "0.9" }
