[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.3" }
# 정규 표현식 사용을 하지 않아서 주석처리했다.
# regex = { version = "1.11" }

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "3.1" }
pretty_assertions = { version = "1.4" }
rand = { version = "0.9" }
