[package]
name = "fortuner"
version = "0.1.0"
edition = "2024"
authors = ["TestAquatic"]
description = "`fortune`의 간단한 러스트 버전"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"
regex = "1.11"
walkdir = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
pretty_assertions = "1.4"
