[package]
name = "calr"
version = "0.1.0"
edition = "2024"
description = "`ccal`의 간단한 러스트 버전"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
itertools = "0.14"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"
